vendor/ocaml/testsuite/tests/typing-objects/pr5858.ml.reference

# class type c = object  end
# Characters 29-30:
  module type S = sig class c: c end;;
                               ^
Error: The class type c is not yet completely defined
# 
