vendor/ocaml/testsuite/tests/typing-objects/pr5858.ml
class type c = object end;;
module type S = sig class c: c end;;
